# etl-for-dumdums

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  README.md  Summary.py  app.py  app_data.py  data.py  deploy.sh  pyproject.toml  setup-secrets.sh
.claude/: settings.json
.claude/commands/: add-source.md  run-checks.md  sync-source.md  verify-page.md
.github/: dependabot.yml
.github/workflows/: backfill-hn-comments.yml  dbt-run.yml  dependabot-auto-merge.yml  deploy.yml  linear-sync.yml  sync-github.yml  sync-hacker-news.yml  sync-linear.yml  sync-oura.yml  sync-stocks.yml  sync-trends.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/core/: _core__models.yml  dim_users.sql  fct_issues.sql  fct_pull_requests.sql
dbt/models/marts/fda_food/: _fda_food__models.yml  fct_fda_events_by_gender.sql  fct_fda_events_by_product.sql  fct_fda_events_by_reaction.sql  fct_fda_events_monthly.sql  (+2 more)
docs/plans/: 2025-12-06-github-source-design.md
lib/: __init__.py  bigquery.py  source.py
notebooks/: oura_investigation.html  oura_investigation.py
pages/: 10_Stock_Prices.py  1_Linear_Issues.py  2_GitHub_PRs.py  3_Oura_Wellness.py  3b_Oura_Investigation.py  4_Hacker_News.py  5_HN_Sentiment.py  6_Google_Trends.py  7_FDA_Food_Recalls.py  8_Iowa_Liquor_Sales.py  9_FDA_Food_Events.py  Oura_Investigation.py
scripts/: backfill_hn_comments.py  backfill_hn_sentiment.py  sync_fda_food.py  sync_fda_food_events.py  sync_github.py  sync_hacker_news.py  sync_iowa_liquor.py  sync_linear.py  sync_oura.py  sync_stocks.py  sync_trends.py
sources/: __init__.py  fda_food.py  fda_food_events.py  github.py  hacker_news.py  iowa_liquor.py  linear.py  oura.py  stocks.py  trends.py
tests/: test_streamlit_pages.py
(+55 files in other folders)
