[project]
name = "etl-for-dumdums"
version = "0.1.0"
description = "ETL jobs for syncing data from various APIs to BigQuery"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.9.0",
    "google-cloud-bigquery>=3.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "streamlit>=1.29.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]
